[UX-493] fix overall layout of modal so that content's scrollbar is sized correctly

--- a/less/theme.less
+++ b/less/theme.less
@@ -713,11 +713,12 @@ footer {
 
 .dialog {
   width: 100%;
-  display: block;
   height: 100%;
   position: fixed;
   top: 0;
   left: 0;
+  display: flex;
+  flex-direction: column;
   background-color: #fff;
   border-radius: 2px;
   z-index: 100;
